added new changes and resume

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       </div>
       <nav class="navbar navbar-expand-lg p-2 sticky-top nav-bg">
         <div class="container">
-          <a class="folio-text" href="https://www.ankitkapopara.tech/">Portfolio.</a>
+          <a class="folio-text" href="https://ankapopara.github.io/ankitkapopara-portfolio/">Portfolio.</a>
           <button class="navbar-toggler" type="button"data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon pt-2"><i class="fas fa-ellipsis-v text-white"></i></span>
           </button>
@@ -100,13 +100,13 @@
                 <b>Age:</b> 29
               </div>
               <div class="personal-info">
-		          <b>Email:</b> <a href='mailto:ankapopara.career@gmail'>ankapopara.career@gmail.com</a>
+		          <b>Email:</b> <a href='mailto:ankapopara.career@gmail.com'>ankapopara.career@gmail.com</a>
               </div>
               <div class="personal-info">
                 <b>From:</b> Mumbai, Maharashtra, India.
               </div>
               <div class="py-3 text-center">
-                  <a class="btn cv-btn shadow" href="../../file/Ankit-kapopara-CV.pdf" target="_blank">Download Resume</a>
+                  <a class="btn cv-btn shadow" href="../../AnkitK-Resume.pdf" target="_blank">Download Resume</a>
               </div>
             </div>
           </div>
@@ -494,7 +494,7 @@
             </div>
           </div>
           <div class="pt-5 text-center">
-            <a class="btn cv-btn shadow" href="../../file/Ankit-kapopara-CV.pdf" target="_blank">Download Resume</a>
+            <a class="btn cv-btn shadow" href="../../AnkitK-Resume.pdf" target="_blank">Download Resume</a>
         </div>
         </div>
       </section>
@@ -515,21 +515,21 @@
                     <i class="fas fa-location-arrow"></i>
                   </div>
                   <h5 class="contact-details">Location:</h5>
-                  <p class="contact-details">Mumbai, Maharashtra, India.</p>
+                  <p class="contact-details">Scarborough, Ontario, Canada.</p>
                 </div>
                 <div class="contact-padding">
                   <div class="contact-icon">
                     <i class="fas fa-envelope"></i>
                   </div>
                   <h5 class="contact-details">Email:</h5>
-                  <a class="contact-link" href='mailto:kapopara.ankit@gmail.com'><p>ankapopara.career@gmail.com</p></a>
+                  <a class="contact-link" href='mailto:ankapopara.career@gmail.com'><p>ankapopara.career@gmail.com</p></a>
                 </div>
                 <div class="contact-padding">
                   <div class="contact-icon">
                     <i class="fas fa-phone-alt"></i>
                   </div>
                   <h5 class="contact-details">Call:</h5>
-                  <a class="contact-link" href="tel:+91-8976396561"><p>+91-8976396561</p></a>
+                  <a class="contact-link" href="tel:+1-(437) 599-6561"><p>+1-(437) 599-6561</p></a>
                 </div>
                 <div class="contact-padding">
                   <div class="pt-3">
