resume path change

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 <b>From:</b> Mumbai, Maharashtra, India.
               </div>
               <div class="py-3 text-center">
-                  <a class="btn cv-btn shadow" href="../../AnkitK-Resume.pdf" target="_blank">Download Resume</a>
+                  <a class="btn cv-btn shadow" href="../AnkitK-Resume.pdf" target="_blank">Download Resume</a>
               </div>
             </div>
           </div>
@@ -494,7 +494,7 @@
             </div>
           </div>
           <div class="pt-5 text-center">
-            <a class="btn cv-btn shadow" href="../../AnkitK-Resume.pdf" target="_blank">Download Resume</a>
+            <a class="btn cv-btn shadow" href="../AnkitK-Resume.pdf" target="_blank">Download Resume</a>
         </div>
         </div>
       </section>
